Adding Documentation, Added support for Reaper project paths

--- a/REAPER/DxTracker/DxTracker.ini
+++ b/REAPER/DxTracker/DxTracker.ini
@@ -5,7 +5,7 @@ framelength = 3
 overlapitems = True
 
 [PROJECT]
-name = SoberOctober2Recap.RPP
+name = podcast.RPP
 path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/SoberOctober
 
 [GT]
@@ -16,34 +16,34 @@ end = 15766.511995464853
 sr = 44100
 
 [DX1]
-name = JOE
+name = Joe
 path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/SoberOctober/Joe Rogan Experience #1194 - Sober October 2 Recap (128kbit_AAC).wav
-start = 164.78952262234077
-end = 173.4198749735268
+start = 27.0
+end = 30.857142857142858
 sr = 44100
-color = 17676405
+color = 21064299
 
 [DX2]
-name = ARI
+name = Ari
 path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/SoberOctober/Joe Rogan Experience #1194 - Sober October 2 Recap (128kbit_AAC).wav
-start = 112.06144425349855
-end = 117.61085361479883
+start = 100.71428571428571
+end = 108.0
 sr = 44100
-color = 29619574
+color = 29029518
 
 [DX3]
-name = TOM
+name = Tom
 path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/SoberOctober/Joe Rogan Experience #1194 - Sober October 2 Recap (128kbit_AAC).wav
-start = 65.74541174049176
-end = 74.602755636983
+start = 37.714285714285715
+end = 44.57142857142857
 sr = 44100
-color = 26017715
+color = 24684945
 
 [DX4]
-name = BERT
+name = Bert
 path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/SoberOctober/Joe Rogan Experience #1194 - Sober October 2 Recap (128kbit_AAC).wav
-start = 185.27622095811142
-end = 192.1763116380529
+start = 61.285714285714285
+end = 71.14285714285714
 sr = 44100
-color = 29418082
+color = 23980998
 
