Fixes and guide

--- a/REAPER/DxTracker/DxTracker.ini
+++ b/REAPER/DxTracker/DxTracker.ini
@@ -5,45 +5,46 @@ framelength = 3
 overlapitems = True
 
 [PROJECT]
-name = podcast.RPP
+name = SoberOctober2Recap.RPP
 path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/SoberOctober
 
 [GT]
-name = Joe Rogan Experience #1194 - Sober October 2 Recap (128kbit_AAC)
+name = GT
 path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/SoberOctober/Joe Rogan Experience #1194 - Sober October 2 Recap (128kbit_AAC).wav
+sourcename = Joe Rogan Experience #1194 - Sober October 2 Recap (128kbit_AAC).wav
 start = 0.0
 end = 15766.511995464853
 sr = 44100
 
 [DX1]
-name = Joe
+name = 1DX
 path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/SoberOctober/Joe Rogan Experience #1194 - Sober October 2 Recap (128kbit_AAC).wav
-start = 27.0
-end = 30.857142857142858
+start = 164.78952262234077
+end = 173.4198749735268
 sr = 44100
-color = 21064299
+color = 17676405
 
 [DX2]
-name = Ari
+name = 2DX
 path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/SoberOctober/Joe Rogan Experience #1194 - Sober October 2 Recap (128kbit_AAC).wav
-start = 100.71428571428571
-end = 108.0
+start = 112.06144425349855
+end = 117.61085361479883
 sr = 44100
-color = 29029518
+color = 29619574
 
 [DX3]
-name = Tom
+name = 3DX
 path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/SoberOctober/Joe Rogan Experience #1194 - Sober October 2 Recap (128kbit_AAC).wav
-start = 37.714285714285715
-end = 44.57142857142857
+start = 65.74541174049176
+end = 74.602755636983
 sr = 44100
-color = 24684945
+color = 26017715
 
 [DX4]
-name = Bert
+name = 4DX
 path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/SoberOctober/Joe Rogan Experience #1194 - Sober October 2 Recap (128kbit_AAC).wav
-start = 61.285714285714285
-end = 71.14285714285714
+start = 185.27622095811142
+end = 192.1763116380529
 sr = 44100
-color = 23980998
+color = 29418082
 
