--- a/REAPER/DxTracker/DxTracker.ini
+++ b/REAPER/DxTracker/DxTracker.ini
@@ -5,46 +5,30 @@ framelength = 3
 overlapitems = True
 
 [PROJECT]
-name = SoberOctober2Recap.RPP
-path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/SoberOctober
+name = DebraSoh.RPP
+path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/Debra Soh
 
 [GT]
-name = GT
-path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/SoberOctober/Joe Rogan Experience #1194 - Sober October 2 Recap (128kbit_AAC).wav
-sourcename = Joe Rogan Experience #1194 - Sober October 2 Recap (128kbit_AAC).wav
+name = Dr. Debra Soh _ The Glenn Beck Podcast _ Ep 11 (128kbit_AAC)
+path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/Debra Soh/Files/Dr. Debra Soh _ The Glenn Beck Podcast _ Ep 11 (128kbit_AAC).wav
+sourcename = Dr. Debra Soh _ The Glenn Beck Podcast _ Ep 11 (128kbit_AAC).wav
 start = 0.0
-end = 15766.511995464853
+end = 4260.327619047619
 sr = 44100
 
 [DX1]
-name = 1DX
-path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/SoberOctober/Joe Rogan Experience #1194 - Sober October 2 Recap (128kbit_AAC).wav
-start = 164.78952262234077
-end = 173.4198749735268
+name = Glenn
+path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/Debra Soh/Files/Dr. Debra Soh _ The Glenn Beck Podcast _ Ep 11 (128kbit_AAC).wav
+start = 12.0
+end = 27.42857142857143
 sr = 44100
-color = 17676405
+color = 25351190
 
 [DX2]
-name = 2DX
-path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/SoberOctober/Joe Rogan Experience #1194 - Sober October 2 Recap (128kbit_AAC).wav
-start = 112.06144425349855
-end = 117.61085361479883
+name = Debra
+path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/Debra Soh/Files/Dr. Debra Soh _ The Glenn Beck Podcast _ Ep 11 (128kbit_AAC).wav
+start = 246.85714285714286
+end = 264.8571428571429
 sr = 44100
-color = 29619574
-
-[DX3]
-name = 3DX
-path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/SoberOctober/Joe Rogan Experience #1194 - Sober October 2 Recap (128kbit_AAC).wav
-start = 65.74541174049176
-end = 74.602755636983
-sr = 44100
-color = 26017715
-
-[DX4]
-name = 4DX
-path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/SoberOctober/Joe Rogan Experience #1194 - Sober October 2 Recap (128kbit_AAC).wav
-start = 185.27622095811142
-end = 192.1763116380529
-sr = 44100
-color = 29418082
+color = 27608480
 
