--- a/REAPER/DxTracker/DxTracker.ini
+++ b/REAPER/DxTracker/DxTracker.ini
@@ -2,33 +2,4 @@
 threshold = 0.9
 hoplength = 1
 framelength = 3
-overlapitems = True
-
-[PROJECT]
-name = DebraSoh.RPP
-path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/Debra Soh
-
-[GT]
-name = Dr. Debra Soh _ The Glenn Beck Podcast _ Ep 11 (128kbit_AAC)
-path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/Debra Soh/Files/Dr. Debra Soh _ The Glenn Beck Podcast _ Ep 11 (128kbit_AAC).wav
-sourcename = Dr. Debra Soh _ The Glenn Beck Podcast _ Ep 11 (128kbit_AAC).wav
-start = 0.0
-end = 4260.327619047619
-sr = 44100
-
-[DX1]
-name = Glenn
-path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/Debra Soh/Files/Dr. Debra Soh _ The Glenn Beck Podcast _ Ep 11 (128kbit_AAC).wav
-start = 12.0
-end = 27.42857142857143
-sr = 44100
-color = 25351190
-
-[DX2]
-name = Debra
-path = /Users/albertovaldezquinto/Projects/02Audio Post/DxTrack/Debra Soh/Files/Dr. Debra Soh _ The Glenn Beck Podcast _ Ep 11 (128kbit_AAC).wav
-start = 246.85714285714286
-end = 264.8571428571429
-sr = 44100
-color = 27608480
-
+overlapitems = False
