Added trim_long_silences, normalize_volume from Reasemblyzer

--- a/REAPER/DxTracker/DxTracker.ini
+++ b/REAPER/DxTracker/DxTracker.ini
@@ -1,5 +1,5 @@
 [CONFIG]
-threshold = 0.91
+threshold = 0.9
 hoplength = 1
-framelength = 3
-overlapitems = False
+framelength = 1
+overlapitems = True
